--- a/index.html
+++ b/index.html
@@ -5,128 +5,290 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Baldur's Gate 3 - Official Website</title>
 </head>
 
 <body>
-
     <header class="header">
-        <div class="header__logo">
-            <img src="assets/img/logo-bg3.png" alt="">
+        <div class="header__container">
+            <div class="header__logo">
+                <img src="assets/img/logo-bg3.png" alt="Baldur's Gate 3 Logo" class="header__logo-img">
+            </div>
+            <nav class="header__nav">
+                <ul class="header__nav-list">
+                    <li class="header__nav-item"><a href="#" class="header__nav-link">About</a></li>
+                    <li class="header__nav-item"><a href="#" class="header__nav-link">Races</a></li>
+                    <li class="header__nav-item"><a href="#" class="header__nav-link">News</a></li>
+                    <li class="header__nav-item"><a href="#" class="header__nav-link">Gallery</a></li>
+                    <li class="header__nav-item"><a href="#" class="header__nav-link header__nav-link--cta">Buy
+                            now</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li>About</li>
-                <li>Races</li>
-                <li>News</li>
-                <li>Gallery</li>
-                <li>Buy now</li>
-            </ul>
-        </nav>
     </header>
 
-    <main>
+    <main class="main">
         <section class="hero">
-            <h1>It's party time</h1>
-            <a href="">Get it now</a>
+            <video class="hero__video" autoplay muted loop>
+                <source src="assets/videos/hero-bg.mp4" type="video/mp4">
+            </video>
+            <div class="hero__content">
+                <h1 class="hero__title">IT'S PARTY TIME</h1>
+                <a href="#" class="hero__btn">GET IT NOW!</a>
+            </div>
         </section>
 
         <section class="awards">
-            <p>BALDUR'S GATE 3</p>
-            <h2>AWARDS</h2>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <div class="award__container">
+                <div class="award__titlebox">
+                    <p class="award__subtitle">BALDUR'S GATE 3</p>
+                    <h2 class="award__title">AWARDS</h2>
+                </div>
+                <div class="award__list">
+                    <div class="award__item">
+                        <img src="assets/img/1.png" alt="BAFTA Award" class="award__img">
+                    </div>
+                    <div class="award__item">
+                        <img src="assets/img/2.png" alt="The Game Awards" class="award__img">
+                    </div>
+                    <div class="award__item">
+                        <img src="assets/img/3.png" alt="Golden Joystick Awards" class="award__img">
+                    </div>
+                    <div class="award__item">
+                        <img src="assets/img/4.png" alt="Steam Award" class="award__img">
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="races">
-            <div class="container">
-
-            </div>
-            <div class="container">
-
+            <h2 class="race__title">GAME RACES</h2>
+            <div class="race__container">
+                <div class="race__left">
+                    <div class="race__grid">
+                        <div class="race__item">
+                            <img src="assets/img/elf.png" alt="Elf" class="race__img">
+                            <p class="race__name">Elf</p>
+                        </div>
+                        <div class="race__item">
+                            <img src="assets/img/tiefling.png" alt="Tiefling" class="race__img">
+                            <p class="race__name">Tiefling</p>
+                        </div>
+                        <div class="race__item">
+                            <img src="assets/img/drow.png" alt="Drow" class="race__img">
+                            <p class="race__name">Drow</p>
+                        </div>
+                        <div class="race__item">
+                            <img src="assets/img/human.png" alt="Human" class="race__img">
+                            <p class="race__name">Human</p>
+                        </div>
+                        <div class="race__item">
+                            <img src="assets/img/githyanki.png" alt="Githyanki" class="race__img">
+                            <p class="race__name">Githyanki</p>
+                        </div>
+                        <div class="race__item">
+                            <img src="assets/img/dwarf.png" alt="Dwarf" class="race__img">
+                            <p class="race__name">Dwarf</p>
+                        </div>
+                        <div class="race__item">
+                            <img src="assets/img/half-elf.png" alt="Half-Elf" class="race__img">
+                            <p class="race__name">Half-Elf</p>
+                        </div>
+                        <div class="race__item">
+                            <img src="assets/img/halfling.png" alt="Halfling" class="race__img">
+                            <p class="race__name">Halfling</p>
+                        </div>
+                        <div class="race__item">
+                            <img src="assets/img/gnome.png" alt="Gnome" class="race__img">
+                            <p class="race__name">Gnome</p>
+                        </div>
+                        <div class="race__item">
+                            <img src="assets/img/half-orc.png" alt="Half-Orc" class="race__img">
+                            <p class="race__name">Half-Orc</p>
+                        </div>
+                        <div class="race__item">
+                            <img src="assets/img/dragonborn.png" alt="Dragonborn" class="race__img">
+                            <p class="race__name">Dragonborn</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="race__right">
+                    <div class="race__detail">
+                        <div class="race__detail-icon">
+                            <img src="assets/img/elf.png" alt="Elf" class="race__detail-img">
+                        </div>
+                        <h3 class="race__detail-title">ELF</h3>
+                        <p class="race__detail-text">With ethereal countenances and long lifespans, elves are at home
+                            with nature's power, flourishing in light and dark alike.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
         <section class="buy">
-            <img src="" alt="">
-            <p>Baldur's Gate 3</p>
-            <h2>BUY NOW</h2>
-            <a href="">Standard</a>
-            <a href="">Digital Deluxe</a>
-            <a href="">Physical Deluxe</a>
-        </section>
-
-        <section class="news">
-            <h2>COMMUNITY UPDATE #33 - PATCH 8 STRESS TEST NOW LIVE</h2>
-            <div>
-
+            <div class="buy__container">
+                <div class="buy__image">
+                    <img src="assets/img/Standard-min.png" alt="Baldur's Gate 3 Box" class="buy__img">
+                </div>
+                <div class="buy__content">
+                    <p class="buy__subtitle">Baldur's Gate 3</p>
+                    <h2 class="buy__title">BUY NOW</h2>
+                    <div class="buy__buttons">
+                        <a href="#" class="buy__btn buy__btn--standard">Standard</a>
+                        <a href="#" class="buy__btn buy__btn--deluxe">Digital Deluxe</a>
+                        <a href="#" class="buy__btn buy__btn--physical">Physical Deluxe</a>
+                    </div>
+                    <div class="buy__description">
+                        <p class="buy__text">Gather your party, and return to the Forgotten Realms in a tale of
+                            fellowship and betrayal, sacrifice and survival, and the lure of absolute power.</p>
+                        <p class="buy__text">Mysterious abilities are awakening inside you, drawn from a Mind Flayer
+                            parasite planted in your brain. Resist, and turn darkness against itself. Or embrace
+                            corruption, and become ultimate evil.</p>
+                        <p class="buy__text">From the creators of Divinity: Original Sin 2 comes a next-generation RPG,
+                            set in the world of Dungeons and Dragons.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <section class="fanart">
-            <h2>GALLERY & FANART</h2>
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+        <section class="news">
+            <div class="new__container">
+                <p class="new__category">News & Update</p>
+                <h2 class="new__title">COMMUNITY UPDATE #33 - PATCH 8 STRESS TEST NOW LIVE</h2>
+                <div class="new__grid">
+                    <article class="new__card new__card--large">
+                        <img src="" alt="Stress Test Update 2" class="new__img">
+                        <div class="new__card-content">
+                            <h3 class="new__card-title">STRESS TEST UPDATE 2</h3>
+                            <p class="new__card-text">We're back (almost) once more with the long-awaited Patch 8 - but
+                                not before we test our early build! Don't worry; we have no plans to run away.</p>
+                        </div>
+                    </article>
+                    <article class="new__card">
+                        <img src="" alt="Stress Test Update 1" class="new__img">
+                        <div class="new__card-content">
+                            <h3 class="new__card-title">STRESS TEST UPDATE 1</h3>
+                            <p class="new__card-text">Update on the stress test build for Patch 8.</p>
+                        </div>
+                    </article>
+                    <article class="new__card new__card--featured">
+                        <img src="" alt="PS5 Update" class="new__img">
+                        <div class="new__card-content">
+                            <h3 class="new__card-title">UNINTENTIONAL PS5 UPDATE AND HOW-TO RETURN TO PATCH 7</h3>
+                            <p class="new__card-text">Yesterday an unintended PS5 build went live. We've since resolved
+                                the issue, but here's how you can switch back to your original save if needed.</p>
+                            <a href="#" class="new__card-link">READ MORE</a>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section class="gallery">
+            <div class="gallery__container">
+                <p class="gallery__category">Community</p>
+                <h2 class="gallery__title">GALLERY & FANART</h2>
+                <div class="gallery__grid">
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-1.jpeg" alt="Gallery 1" class="gallery__img">
+                    </div>
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-2.webp" alt="Gallery 2" class="gallery__img">
+                    </div>
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-3.webp" alt="Gallery 3" class="gallery__img">
+                    </div>
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-4.jpeg" alt="Gallery 4" class="gallery__img">
+                    </div>
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-5.jpeg" alt="Gallery 5" class="gallery__img">
+                    </div>
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-6.png" alt="Gallery 6" class="gallery__img">
+                    </div>
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-7.webp" alt="Gallery 7" class="gallery__img">
+                    </div>
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-8.jpeg" alt="Gallery 8" class="gallery__img">
+                    </div>
+                </div>
             </div>
         </section>
 
         <section class="download">
-            <div>
-                <p>Digital Downloads</p>
-                <h2>BACKGROUND & OVERLAY</h2>
-                <p>Get your hands on your very own customizable Baldur's Gate 3 stream overlays and Origin Character
-                    mobile backgrounds, for free!</p>
-                <a href="">Get it now</a>
+            <div class="download__container">
+                <div class="download__content">
+                    <p class="download__subtitle">Digital Downloads</p>
+                    <h2 class="download__title">BACKGROUND & OVERLAY</h2>
+                    <p class="download__text">Get your hands on your very own customizable Baldur's Gate 3 stream
+                        overlays and Origin Character mobile backgrounds, for free!</p>
+                    <a href="#" class="download__btn">Get it now</a>
+                </div>
+                <div class="download__preview">
+                    <img src="assets/img/cta-bg.png" alt="Download Preview" class="download__img">
+                </div>
             </div>
         </section>
+    </main>
 
-        <footer>
-            <div>
-                <p>Social Media</p>
-                <h2>JOIN US ON OUR ADVENTURES!</h2>
-                <p>&copy;2021 Larian Studios. All rights reserved. All trademarks are the property of their respective
-                    owners.</p>
-                <nav>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__top">
+                <div class="footer__intro">
+                    <p class="footer__category">Social Media</p>
+                    <h2 class="footer__title">JOIN US ON OUR ADVENTURES!</h2>
+                </div>
+            </div>
+            <div class="footer__content">
+                <nav class="footer__nav">
+                    <div class="footer__col">
+                        <h3 class="footer__col-title">GAME</h3>
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">About</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Game Features</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Races & Classes</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">News</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__col">
+                        <h3 class="footer__col-title">COMMUNITY</h3>
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Home</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Streams</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__col">
+                        <h3 class="footer__col-title">SUPPORT</h3>
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">FAQ</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Press</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__col">
+                        <h3 class="footer__col-title">BUY NOW</h3>
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer__link">Digital Deluxe Edition</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Physical Deluxe Edition</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Merchandise</a></li>
+                        </ul>
+                    </div>
                 </nav>
             </div>
-            <a href="">Privacy Policy</a>
-            <a href="">Terms of Service</a>
-            <a href="">Legal Information</a>
-        </footer>
-    </main>
+            <div class="footer__bottom">
+                <p class="footer__copyright">&copy;2021 Larian Studios. All rights reserved. All trademarks are the
+                    property of their respective owners.</p>
+                <div class="footer__legal">
+                    <a href="#" class="footer__legal-link">Privacy Policy</a>
+                    <a href="#" class="footer__legal-link">Terms of Service</a>
+                    <a href="#" class="footer__legal-link">Legal Information</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
