Add margin class to sections and update styles for consistency

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </section>
 
-        <section class="awards">
+        <section class="awards margin">
             <div class="award__container">
                 <div class="award__titlebox">
                     <p class="award__subtitle">BALDUR'S GATE 3</p>
@@ -61,8 +61,10 @@
             </div>
         </section>
 
-        <section class="races">
-            <h2 class="race__title">GAME RACES</h2>
+        <section class="races margin">
+            <div>
+                <h2 class="race__title">GAME RACES</h2>
+            </div>
             <div class="race__container">
                 <div class="race__left">
                     <div class="race__grid">
@@ -125,7 +127,7 @@
             </div>
         </section>
 
-        <section class="buy">
+        <section class="buy margin">
             <div class="buy__container">
                 <div class="buy__image">
                     <img src="assets/img/Standard-min.png" alt="Baldur's Gate 3 Box" class="buy__img">
