hero, awards and game races section almost done

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </section>
 
-        <section class="awards margin">
+        <section class="awards ">
             <div class="award__container">
                 <div class="award__titlebox">
                     <p class="award__subtitle">BALDUR'S GATE 3</p>
@@ -61,8 +61,8 @@
             </div>
         </section>
 
-        <section class="races margin">
-            <div>
+        <section class="races">
+            <div class="race__title-container">
                 <h2 class="race__title">GAME RACES</h2>
             </div>
             <div class="race__container">
@@ -120,6 +120,7 @@
                             <img src="assets/img/elf.png" alt="Elf" class="race__detail-img">
                         </div>
                         <h3 class="race__detail-title">ELF</h3>
+                        <div class="race__detail--line"></div>
                         <p class="race__detail-text">With ethereal countenances and long lifespans, elves are at home
                             with nature's power, flourishing in light and dark alike.</p>
                     </div>
@@ -127,7 +128,7 @@
             </div>
         </section>
 
-        <section class="buy margin">
+        <section class="buy">
             <div class="buy__container">
                 <div class="buy__image">
                     <img src="assets/img/Standard-min.png" alt="Baldur's Gate 3 Box" class="buy__img">
