had to redo my html for the footer and made the css for it too

--- a/index.html
+++ b/index.html
@@ -175,17 +175,17 @@
                     <article class="new__card rounded-lg bg-accent-weak">
                         <div class="new__card-content">
                             <h3 class="new__card-title text-accent fw-700">STRESS TEST UPDATE 1</h3>
-                            <p class="new__card-text text-white">Update on the stress test build for Patch 8.</p>
+                            <p class="new__card-text text-white">Update #1 for the Patch 8 stress test is going live!
+                            </p>
                             <a href="#" class="new__card-link text-accent">READ MORE</a>
                         </div>
                     </article>
                     <article class="new__card rounded-lg bg-accent-weak">
                         <div class="new__card-content">
-                            <h3 class="new__card-title text-accent fw-700">UNINTENTIONAL PS5 UPDATE AND HOW-TO RETURN TO
+                            <h3 class="new__card-title text-accent fw-700">UNINTENTIONAL PS5 UPDATE AND HOW TO RETURN TO
                                 PATCH 7</h3>
-                            <p class="new__card-text text-white">Yesterday an unintended PS5 build went live. We've
-                                since resolved
-                                the issue, but here's how you can switch back to your original save if needed.</p>
+                            <p class="new__card-text text-white">Avoid compatibility issues with savegames and mods by
+                                uninstalling and reinstalling Baldur's Gate 3 tor return to Patch 7.</p>
                             <a href="#" class="new__card-link text-accent">READ MORE</a>
                         </div>
                     </article>
@@ -240,61 +240,65 @@
         </section>
     </main>
 
-    <footer class="footer p-2 rounded-lg">
-        <div class="footer__container mx-auto">
+    <footer class="footer">
+        <div class="footer__container">
             <div class="footer__top">
-                <div class="footer__intro text-center">
-                    <p class="footer__category text-accent">Social Media</p>
-                    <h2 class="footer__title text-white fw-700 fs-25">JOIN US ON OUR ADVENTURES!</h2>
+                <div class="footer__intro">
+                    <p class="footer__category ff-gothic text-white">Social Media</p>
+                    <h2 class="footer__title">JOIN US ON OUR ADVENTURES!</h2>
+                    <p class="footer__copyright ff-gothic text-white">
+                        © 2021 Larian Studios. All rights reserved. All trademarks are the property of their respective
+                        owners.
+                    </p>
                 </div>
-            </div>
-            <div class="footer__content">
-                <nav class="footer__nav flex justify-between gap-2">
+
+                <nav class="footer__nav">
                     <div class="footer__col">
-                        <h3 class="footer__col-title text-accent">GAME</h3>
-                        <ul class="footer__list">
-                            <li class="footer__item"><a href="#" class="footer__link text-white">About</a></li>
-                            <li class="footer__item"><a href="#" class="footer__link text-white">Game Features</a></li>
-                            <li class="footer__item"><a href="#" class="footer__link text-white">Races & Classes</a>
+                        <h3 class="footer__col-title">GAME</h3>
+                        <ul class="footer__list ff-gothic">
+                            <li class="footer__item"><a href="#" class="footer__link">About</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Game Feature</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Full Cast</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">News & Updates</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Press</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer__col">
+                        <h3 class="footer__col-title">COMMUNITY</h3>
+                        <ul class="footer__list ff-gothic">
+                            <li class="footer__item"><a href="#" class="footer__link">Forum</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Discord</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer__col">
+                        <h3 class="footer__col-title">SUPPORT</h3>
+                        <ul class="footer__list ff-gothic">
+                            <li class="footer__item"><a href="#" class="footer__link ">Support</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link ">FAQ</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer__col">
+                        <h3 class="footer__col-title">BUY NOW</h3>
+                        <ul class="footer__list ff-gothic">
+                            <li class="footer__item"><a href="#" class="footer__link">Standard Edition</a>
                             </li>
-                            <li class="footer__item"><a href="#" class="footer__link text-white">News</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer__col">
-                        <h3 class="footer__col-title text-accent">COMMUNITY</h3>
-                        <ul class="footer__list">
-                            <li class="footer__item"><a href="#" class="footer__link text-white">Home</a></li>
-                            <li class="footer__item"><a href="#" class="footer__link text-white">Streams</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer__col">
-                        <h3 class="footer__col-title text-accent">SUPPORT</h3>
-                        <ul class="footer__list">
-                            <li class="footer__item"><a href="#" class="footer__link text-white">FAQ</a></li>
-                            <li class="footer__item"><a href="#" class="footer__link text-white">Contact</a></li>
-                            <li class="footer__item"><a href="#" class="footer__link text-white">Press</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer__col">
-                        <h3 class="footer__col-title text-accent">BUY NOW</h3>
-                        <ul class="footer__list">
-                            <li class="footer__item"><a href="#" class="footer__link text-white">Digital Deluxe
+                            <li class="footer__item"><a href="#" class="footer__link">Digital Deluxe
                                     Edition</a></li>
-                            <li class="footer__item"><a href="#" class="footer__link text-white">Physical Deluxe
+                            <li class="footer__item"><a href="#" class="footer__link">Physical Deluxe
                                     Edition</a></li>
-                            <li class="footer__item"><a href="#" class="footer__link text-white">Merchandise</a></li>
                         </ul>
                     </div>
                 </nav>
             </div>
-            <div class="footer__bottom text-center">
-                <p class="footer__copyright text-white">&copy;2021 Larian Studios. All rights reserved. All trademarks
-                    are the
-                    property of their respective owners.</p>
-                <div class="footer__legal flex justify-center gap-2">
-                    <a href="#" class="footer__legal-link text-accent">Privacy Policy</a>
-                    <a href="#" class="footer__legal-link text-accent">Terms of Service</a>
-                    <a href="#" class="footer__legal-link text-accent">Legal Information</a>
+
+            <div class="footer__bottom">
+                <div class="footer__legal ff-gothic">
+                    <a href="#" class="footer__legal-link">Privacy Policy</a>
+                    <a href="#" class="footer__legal-link">Terms of Service</a>
+                    <a href="#" class="footer__legal-link">Legal Information</a>
                 </div>
             </div>
         </div>
