--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <div class="header__logo">
                 <a href=""><img src="assets/img/logo-bg3.png" alt="Baldur's Gate 3 Logo" class="header__logo-img"></a>
             </div>
+            <div class="header__burger">
+                <span class="header__burger-line"></span>
+                <span class="header__burger-line"></span>
+                <span class="header__burger-line"></span>
+            </div>
             <nav class="header__nav">
                 <ul class="header__nav-list">
                     <li class="header__nav-item"><a href="#" class="header__nav-link">About</a></li>
@@ -304,7 +309,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
