--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </header>
 
     <main>
+
         <section class="hero">
             <video class="hero__video" autoplay muted loop>
                 <source src="assets/videos/hero-bg.mp4" type="video/mp4">
@@ -43,90 +44,90 @@
             </div>
         </section>
 
-        <section class="awards p-2">
-            <div class="award__container flex align-center justify-between gap-2 rounded-lg">
+        <section class="awards">
+            <div class="award__container">
                 <div class="award__titlebox">
-                    <p class="award__subtitle text-white">BALDUR'S GATE 3</p>
-                    <h2 class="award__title text-accent fs-25">AWARDS</h2>
+                    <p class="award__subtitle">BALDUR'S GATE 3</p>
+                    <h2 class="award__title">AWARDS</h2>
                 </div>
-                <div class="award__list flex align-center gap-2">
-                    <div class="award__item flex-center">
+                <div class="award__list">
+                    <div class="award__item">
                         <a href=""><img src="assets/img/1.png" alt="BAFTA Award" class="award__img"></a>
                     </div>
-                    <div class="award__item flex-center">
+                    <div class="award__item">
                         <a href=""><img src="assets/img/2.png" alt="The Game Awards" class="award__img"></a>
                     </div>
-                    <div class="award__item flex-center">
+                    <div class="award__item">
                         <a href=""><img src="assets/img/3.png" alt="Golden Joystick Awards" class="award__img"></a>
                     </div>
-                    <div class="award__item flex-center">
+                    <div class="award__item">
                         <a href=""><img src="assets/img/4.png" alt="Steam Award" class="award__img"></a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="races flex-center flex-column p-2 rounded-lg">
+        <section class="races">
             <div class="race__title-container">
-                <h2 class="race__title text-accent fs-25 text-justify text-uppercase">GAME RACES</h2>
+                <h2 class="race__title">GAME RACES</h2>
             </div>
             <div class="race__container">
-                <div class="race__left rounded p-2">
-                    <div class="race__grid flex flex-wrap gap-2 justify-center">
-                        <div class="race__item flex-column align-center p-05">
+                <div class="race__left">
+                    <div class="race__grid">
+                        <div class="race__item">
                             <img src="assets/img/elf.png" alt="Elf" class="race__img">
-                            <p class="race__name text-white">Elf</p>
+                            <p class="race__name">Elf</p>
                         </div>
-                        <div class="race__item flex-column align-center p-05">
+                        <div class="race__item">
                             <img src="assets/img/tiefling.png" alt="Tiefling" class="race__img">
-                            <p class="race__name text-white">Tiefling</p>
+                            <p class="race__name">Tiefling</p>
                         </div>
-                        <div class="race__item flex-column align-center p-05">
+                        <div class="race__item">
                             <img src="assets/img/drow.png" alt="Drow" class="race__img">
-                            <p class="race__name text-white">Drow</p>
+                            <p class="race__name">Drow</p>
                         </div>
-                        <div class="race__item flex-column align-center p-05">
+                        <div class="race__item">
                             <img src="assets/img/human.png" alt="Human" class="race__img">
-                            <p class="race__name text-white">Human</p>
+                            <p class="race__name">Human</p>
                         </div>
-                        <div class="race__item flex-column align-center p-05">
+                        <div class="race__item">
                             <img src="assets/img/githyanki.png" alt="Githyanki" class="race__img">
-                            <p class="race__name text-white">Githyanki</p>
+                            <p class="race__name">Githyanki</p>
                         </div>
-                        <div class="race__item flex-column align-center p-05">
+                        <div class="race__item">
                             <img src="assets/img/dwarf.png" alt="Dwarf" class="race__img">
-                            <p class="race__name text-white">Dwarf</p>
+                            <p class="race__name">Dwarf</p>
                         </div>
-                        <div class="race__item flex-column align-center p-05">
+                        <div class="race__item">
                             <img src="assets/img/half-elf.png" alt="Half-Elf" class="race__img">
-                            <p class="race__name text-white">Half-Elf</p>
+                            <p class="race__name">Half-Elf</p>
                         </div>
-                        <div class="race__item flex-column align-center p-05">
+                        <div class="race__item">
                             <img src="assets/img/halfling.png" alt="Halfling" class="race__img">
-                            <p class="race__name text-white">Halfling</p>
+                            <p class="race__name">Halfling</p>
                         </div>
-                        <div class="race__item flex-column align-center p-05">
+                        <div class="race__item">
                             <img src="assets/img/gnome.png" alt="Gnome" class="race__img">
-                            <p class="race__name text-white">Gnome</p>
+                            <p class="race__name">Gnome</p>
                         </div>
-                        <div class="race__item flex-column align-center p-05">
+                        <div class="race__item">
                             <img src="assets/img/half-orc.png" alt="Half-Orc" class="race__img">
-                            <p class="race__name text-white">Half-Orc</p>
+                            <p class="race__name">Half-Orc</p>
                         </div>
-                        <div class="race__item flex-column align-center p-05">
+                        <div class="race__item">
                             <img src="assets/img/dragonborn.png" alt="Dragonborn" class="race__img">
-                            <p class="race__name text-white">Dragonborn</p>
+                            <p class="race__name">Dragonborn</p>
                         </div>
                     </div>
                 </div>
-                <div class="race__right rounded p-2 flex justify-center">
-                    <div class="race__detail text-center">
-                        <div class="race__detail-icon flex justify-center">
+                <div class="race__right">
+                    <div class="race__detail">
+                        <div class="race__detail-icon">
                             <img src="assets/img/elf.png" alt="Elf" class="race__detail-img">
                         </div>
-                        <h3 class="race__detail-title text-accent fs-25">ELF</h3>
+                        <h3 class="race__detail-title">ELF</h3>
                         <div class="race__detail--line"></div>
-                        <p class="race__detail-text text-accent fs-1">With ethereal countenances and long
+                        <p class="race__detail-text">With ethereal countenances and long
                             lifespans, elves are at home
                             with nature's power, flourishing in light and dark alike.</p>
                     </div>
@@ -134,28 +135,28 @@
             </div>
         </section>
 
-        <section class="buy p-2">
-            <div class="buy__container flex gap-2">
-                <div class="buy__image flex align-center justify-center">
-                    <img src="assets/img/Standard-min.png" alt="Baldur's Gate 3 Box" class="buy__img rounded">
+        <section class="buy">
+            <div class="buy__container">
+                <div class="buy__image">
+                    <img src="assets/img/Standard-min.png" alt="Baldur's Gate 3 Box" class="buy__img">
                 </div>
-                <div class="buy__content flex-column justify-center align-start text-white">
+                <div class="buy__content">
                     <p class="buy__subtitle">Baldur's Gate 3</p>
-                    <h2 class="buy__title text-accent fs-25">BUY NOW</h2>
-                    <div class="buy__buttons flex gap-2">
-                        <a href="#" class="buy__btn bg-dark text-white">Standard</a>
-                        <a href="#" class="buy__btn bg-dark text-white">Digital Deluxe</a>
-                        <a href="#" class="buy__btn bg-dark text-white">Physical Deluxe</a>
+                    <h2 class="buy__title">BUY NOW</h2>
+                    <div class="buy__buttons">
+                        <a href="#" class="buy__btn">Standard</a>
+                        <a href="#" class="buy__btn">Digital Deluxe</a>
+                        <a href="#" class="buy__btn">Physical Deluxe</a>
                     </div>
                     <div class="buy__description">
-                        <p class="buy__text ff-gothic">Gather your party, and return to the Forgotten Realms in a tale
+                        <p class="buy__text">Gather your party, and return to the Forgotten Realms in a tale
                             of
                             fellowship and betrayal, sacrifice and survival, and the lure of absolute power.</p>
-                        <p class="buy__text ff-gothic">Mysterious abilities are awakening inside you, drawn from a Mind
+                        <p class="buy__text">Mysterious abilities are awakening inside you, drawn from a Mind
                             Flayer
                             parasite planted in your brain. Resist, and turn darkness against itself. Or embrace
                             corruption, and become ultimate evil.</p>
-                        <p class="buy__text ff-gothic">From the creators of Divinity: Original Sin 2 comes a
+                        <p class="buy__text">From the creators of Divinity: Original Sin 2 comes a
                             next-generation RPG,
                             set in the world of Dungeons and Dragons.</p>
                     </div>
@@ -163,84 +164,83 @@
             </div>
         </section>
 
-        <section class="news p-2">
+        <section class="news">
             <div class="new__container">
-                <p class="new__category text-white">News & Update</p>
-                <h2 class="new__title text-accent fs-15">COMMUNITY UPDATE #33 - PATCH 8 STRESS TEST NOW LIVE</h2>
-                <div class="new__grid gap-2">
-                    <article class="new__card rounded-lg bg-accent-weak">
+                <p class="new__category">News & Update</p>
+                <h2 class="new__title">COMMUNITY UPDATE #33 - PATCH 8 STRESS TEST NOW LIVE</h2>
+                <div class="new__grid">
+                    <article class="new__card">
                         <div class="new__card-content">
-                            <h3 class="new__card-title text-accent">STRESS TEST UPDATE 2</h3>
-                            <p class="new__card-text text-white">An issue affecting cross-play has been resolved, which
+                            <h3 class="new__card-title">STRESS TEST UPDATE 2</h3>
+                            <p class="new__card-text">An issue affecting cross-play has been resolved, which
                                 means
                                 players in the stress test will now be able to fully test cross-play with friends</p>
-                            <a href="#" class="new__card-link text-accent">READ MORE</a>
+                            <a href="#" class="new__card-link">READ MORE</a>
                         </div>
                     </article>
-                    <article class="new__card rounded-lg bg-accent-weak">
+                    <article class="new__card">
                         <div class="new__card-content">
-                            <h3 class="new__card-title text-accent">STRESS TEST UPDATE 1</h3>
-                            <p class="new__card-text text-white">Update #1 for the Patch 8 stress test is going live!
+                            <h3 class="new__card-title">STRESS TEST UPDATE 1</h3>
+                            <p class="new__card-text">Update #1 for the Patch 8 stress test is going live!
                             </p>
-                            <a href="#" class="new__card-link text-accent">READ MORE</a>
+                            <a href="#" class="new__card-link">READ MORE</a>
                         </div>
                     </article>
-                    <article class="new__card rounded-lg bg-accent-weak">
+                    <article class="new__card">
                         <div class="new__card-content">
-                            <h3 class="new__card-title text-accent">UNINTENTIONAL PS5 UPDATE AND HOW TO RETURN TO
+                            <h3 class="new__card-title">UNINTENTIONAL PS5 UPDATE AND HOW TO RETURN TO
                                 PATCH 7</h3>
-                            <p class="new__card-text text-white">Avoid compatibility issues with savegames and mods by
+                            <p class="new__card-text">Avoid compatibility issues with savegames and mods by
                                 uninstalling and reinstalling Baldur's Gate 3 tor return to Patch 7.</p>
-                            <a href="#" class="new__card-link text-accent">READ MORE</a>
+                            <a href="#" class="new__card-link">READ MORE</a>
                         </div>
                     </article>
                 </div>
             </div>
         </section>
 
-        <section class="gallery p-2">
+        <section class="gallery">
             <div class="gallery__container">
-                <p class="gallery__category text-white ff-gothic">Community</p>
-                <h2 class="gallery__title text-accent fs-25">GALLERY & FANART</h2>
-                <div class="gallery__grid gap-2">
-                    <div class="gallery__item rounded">
-                        <img src="assets/img/gallery-1.jpeg" alt="Gallery 1" class="gallery__img rounded">
+                <p class="gallery__category">Community</p>
+                <h2 class="gallery__title">GALLERY & FANART</h2>
+                <div class="gallery__grid">
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-1.jpeg" alt="Gallery 1" class="gallery__img">
                     </div>
-                    <div class="gallery__item rounded">
-                        <img src="assets/img/gallery-2.webp" alt="Gallery 2" class="gallery__img rounded">
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-2.webp" alt="Gallery 2" class="gallery__img">
                     </div>
-                    <div class="gallery__item rounded">
-                        <img src="assets/img/gallery-3.webp" alt="Gallery 3" class="gallery__img rounded">
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-3.webp" alt="Gallery 3" class="gallery__img">
                     </div>
-                    <div class="gallery__item rounded">
-                        <img src="assets/img/gallery-4.jpeg" alt="Gallery 4" class="gallery__img rounded">
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-4.jpeg" alt="Gallery 4" class="gallery__img">
                     </div>
-                    <div class="gallery__item rounded">
-                        <img src="assets/img/gallery-5.jpeg" alt="Gallery 5" class="gallery__img rounded">
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-5.jpeg" alt="Gallery 5" class="gallery__img">
                     </div>
-                    <div class="gallery__item rounded">
-                        <a href=""><img src="assets/img/gallery-6.png" alt="Gallery 6" class="gallery__img rounded"></a>
-
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-6.png" alt="Gallery 6" class="gallery__img">
                     </div>
-                    <div class="gallery__item rounded">
-                        <img src="assets/img/gallery-7.webp" alt="Gallery 7" class="gallery__img rounded">
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-7.webp" alt="Gallery 7" class="gallery__img">
                     </div>
-                    <div class="gallery__item rounded">
-                        <img src="assets/img/gallery-8.jpeg" alt="Gallery 8" class="gallery__img rounded">
+                    <div class="gallery__item">
+                        <img src="assets/img/gallery-8.jpeg" alt="Gallery 8" class="gallery__img">
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="download flex-center p-2 rounded-lg">
-            <div class="download__container flex align-center gap-2 rounded-lg">
+        <section class="download">
+            <div class="download__container">
                 <div class="download__content">
-                    <p class="download__subtitle text-white">Digital Downloads</p>
-                    <h2 class="download__title text-accent fs-25">BACKGROUND & OVERLAY</h2>
-                    <p class="download__text text-white">Get your hands on your very own customizable Baldur's Gate 3
+                    <p class="download__subtitle">Digital Downloads</p>
+                    <h2 class="download__title">BACKGROUND & OVERLAY</h2>
+                    <p class="download__text">Get your hands on your very own customizable Baldur's Gate 3
                         stream
                         overlays and Origin Character mobile backgrounds, for free!</p>
-                    <a href="#" class="download__btn text-white">Get it now</a>
+                    <a href="#" class="download__btn">Get it now</a>
                 </div>
             </div>
         </section>
