header/hero redone

--- a/index.html
+++ b/index.html
@@ -9,7 +9,58 @@
 </head>
 
 <body>
-   
+    <header class="header">
+        <div class="header__container">
+            <img class="header__logo" src="assets/img/logo-bg3.png" alt="Logo de Baldur's Gate 3">
+            <nav class="header__nav">
+                <ul class="header__list medieval-regular container">
+                    <li class="header__item"><a class="header__link color-accent" href="">About</a>
+                    </li>
+                    <li class="header__item"><a class="header__link color-accent" href="">Races</a>
+                    </li>
+                    <li class="header__item"><a class="header__link color-accent " href="">News</a></li>
+                    <li class="header__item"><a class="header__link color-accent " href="">Gallery</a>
+                    </li>
+                    <li class="header__item"><a class="header__link header__link--cta color-dark btn" href="">Buy
+                            now</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <video class="hero__video" autoplay muted loop>
+                <source src="assets/videos/hero-bg.mp4" type="video/mp4">
+            </video>
+            <div class="hero__content">
+                <h1 class="medieval-regular color-accent">IT'S PARTY TIME</h1>
+                <div class="hero__btn--container">
+                    <a href="" class="medieval-regular btn btn__hero">GET IT NOW!</a>
+                </div>
+            </div>
+        </section>
+        <section class="award">
+
+        </section>
+        <section class="race">
+
+        </section>
+        <section class="buy">
+
+        </section>
+        <section class="news">
+
+        </section>
+        <section class="gallery">
+
+        </section>
+        <section class="download">
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
