Add responsive styles and update header burger

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <header class="header">
         <div class="header__container">
             <img class="header__logo" src="assets/img/logo-bg3.png" alt="Logo de Baldur's Gate 3">
+            <a class="header__burger">
+                <span class="header__burger-line"></span>
+                <span class="header__burger-line"></span>
+                <span class="header__burger-line"></span>
+            </a>
             <nav class="header__nav">
                 <ul class="header__list medieval-regular container">
                     <li class="header__item"><a class="header__link text-accent" href="">About</a>
